syntax = "proto3";

package gov.cms.mpsm.rda.v1.fiss;

option java_multiple_files = true;

import "rda/v1/enum_options.proto";

// FISS Claim Type Indicator
enum FissClaimTypeIndicator {
  CLAIM_TYPE_INPATIENT = 0    [(string_value) = "1"];
  CLAIM_TYPE_SNF = 1          [(string_value) = "2"];
  CLAIM_TYPE_OUTPATIENT = 2   [(string_value) = "3"];
  CLAIM_TYPE_HOME_HEALTH = 3  [(string_value) = "4"];
  CLAIM_TYPE_HOSPICE = 4      [(string_value) = "5"];
  CLAIM_TYPE_PART_B = 5       [(string_value) = "6"];
  CLAIM_TYPE_TOB_X20_X28 = 6  [(string_value) = "A"];
  CLAIM_TYPE_TOB_130_138 = 7  [(string_value) = "B"];
}
