syntax = "proto3";

package gov.cms.mpsm.rda.v1.fiss;

option java_multiple_files = true;

// Processing Type Enum that maps Processing Types to ASCII values
enum FissProcessingType {
  // Processing Type was not set
  PROCESSING_TYPE_UNSET = 0;

  // ASCII B
  PROCESSING_TYPE_BATCH = 66;

  // ASCII M
  PROCESSING_TYPE_MANUAL = 77;

  // ASCII O
  PROCESSING_TYPE_OFFLINE = 79;
}
